Changelog
=========

4.13-dev - (unreleased)
-----------------------
 * Bug fix: Replaced aq_parent with www
   [voineali #4590]
 * Bug fix: Cache faceted and Topic only one hour instead of 24
   [voineali #4824]

4.12 - (2011-12-15)
-------------------
 * Bug fix: added patch to avoid logic bug in plone.outputfilters
   image captioning code [tiberich #4832]
 * Bug fix: Cache frontpage only one hour instead of 24
   [voineali #4824]
 * Bug fix: Fixed toLocalizedTime to show long_format
   [voineali #4798]
 * Bug fix: fix limited search behavior of tinymce in regards
   to internal linking and breadcrumbs trails for image and internal link
   plugins [ichimdav #4825]

4.11 - (2011-12-02)
-------------------
 * Feature: added logging for missing blobs [tiberich #4702]
 * Bug fix: added script to check for missing blobs [ghicaale #4806]
 * Bug fix: improve logging for migration script for missing filenames in
   blobs [tiberich #4746]

4.10 - (2011-11-25)
-------------------
 * Bug fix: Set filename for image fields where missing [szabozo0 #4746]

4.9 - (2011-11-25)
------------------
 * Bug fix: Fixed previous broken egg.

4.8 - (2011-11-25)
------------------
 * Bug fix: added patch for EEA mailhost [ghicaale #4770]

4.7 - (2011-11-25)
------------------
* Feature: Added EEA mailhost configuration
  [ghicaale #4770]

4.6 - (2011-11-22)
------------------
* Added patch for Products.TinyMCE bug in utility
   [tiberich #4733]

4.5 - (2011-11-21)
------------------
* no changes

4.4 - (2011-11-21)
------------------
* Cleanup: pylint warnigns
  [voineali]

4.3 - (2011-11-19)
------------------
 * Added patch to avoid failure in missing blobs
   [tiberich]

4.2 - (2011-11-19)
------------------
* Change: Made Themes tab hidden as it already in Categorization tab
  [voineali #4694]
* Added get_oid External method to help debug blobs [tiberich]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------